@@ -11,6 +11,9 @@ import java.lang.reflect.Field;
  * architecture hints such as {@link #IS64BIT}.  It exists solely as a
  * holder for the native handle and should never be instantiated or
  * extended directly.
+ * Provides access to the {@link Unsafe} instance and related memory properties.
+ * When running on JDK 17 or later start the JVM with
+ * {@code --add-opens java.base/jdk.internal.misc=ALL-UNNAMED} to permit reflection.
  */
 public enum UnsafeMemory {
     // Empty enum to prevent instantiation
